# augment

./: mypy.ini  pyproject.toml
.github/workflows/: black.yaml  mypy.yaml  publish.yaml  tests.yaml
augment/: __init__.py
