[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "augment-nd"
description = "Simple elastic augmentation for ND arrays."
version = "0.1.2"
license = {text = "MIT"}
readme = "README.md"
authors = [
  {name = "Jan Funke", email = "funkej@hhmi.org"},
]

requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []

dependencies = [
    "numpy",
    "scipy",
    "h5py",
]

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'mypy',
]

[tool.black]
target_version = ['py37', 'py38', 'py39', 'py310']
